# EADScalc

./: .gitignore  .gitlab-ci.yml  .releaserc.yml  CHANGELOG.md  EADScalc.py  EA_calculator_lmfit_v4.py  README.md  pyproject.toml
src/: EADScalc.py  XPSDScalc.py  __init__.py
src/eadscalc/: EADScalc.py
