[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "EADScalc"
version = "1.2.4"
authors = [
  { name="Samuel Eyley", email="eadscalcpypi.epasf@simplelogin.com" },
]
description = "Scripts for calculating the DS of modified cellulose from elemental analysis results"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "lmfit>1.2.0",
    "click"
]

[project.urls]
Homepage = "https://github.com/Sustainable-Materials-Lab/EADScalc"
Issues = "https://github.com/Sustainable-Materials-Lab/EADScalc/issues"

[project.scripts]
EADScalc = "eadscalc.EADScalc:cli"

[tool.uv.build-backend]
module-name = "eadscalc"
